--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"helmet-csp": "^4.0.0",
 		"hi-base32": "^0.5.1",
 		"hpp": "^0.2.3",
+		"ioredis": "^5.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"luxon": "^3.5.0",
 		"module-alias": "^2.2.3",
@@ -53,6 +54,7 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/luxon": "^3.4.2",
 		"@types/morgan": "^1.9.9",
+		"@types/node": "^22.7.4",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"eslint": "^8.0.0",
