--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@faker-js/faker": "^8.4.1",
 		"@types/multer": "^1.4.11",
 		"bcryptjs": "^2.4.3",
+		"bullmq": "^5.15.0",
 		"compression": "^1.7.4",
 		"connect-timeout": "^1.9.0",
 		"cookie-parser": "^1.4.6",
@@ -38,6 +39,7 @@
 		"mongoose": "^8.4.4",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.15",
 		"npm": "^10.8.1",
 		"ts-custom-error": "^3.3.1",
 		"tsconfig-paths": "^4.2.0",
@@ -55,6 +57,7 @@
 		"@types/luxon": "^3.4.2",
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.7.4",
+		"@types/nodemailer": "^6.4.16",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"eslint": "^8.0.0",
